--- a/src/style.scss
+++ b/src/style.scss
@@ -63,6 +63,12 @@ img {
     }
 }
 
+@media (min-width: 768px) {
+    .partsGrid {
+        grid-template-columns: 1fr 1074px 1fr;
+    }
+}
+
 /* Navigation button */
 .nav-button {
     grid-column: 3;
@@ -163,5 +169,41 @@ img {
     grid-row: 3;
     background-color: $black;
     color: $white;
+    padding: 81px 0 86px;
+
+    & > * {
+        grid-row: 1;
+    }
+
+    .site {
+        margin-bottom: 33px;
+        font-size: 37px;
+        font-weight: bold;
+    }
+
+    .address {
+        font-size: 14px;
+        line-height: 1.3;
+    }
+
+    .chat {
+        justify-self: end;
+        margin-top: -100px;
+        color: $primary;
+        font-size: 16px;
+        text-align: center;
+
+        img {
+            padding-bottom: 7px;
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .footer {
+        .chat {
+            margin-top: 0;
+        }
+    }
 }
 
