--- a/src/style.scss
+++ b/src/style.scss
@@ -116,6 +116,7 @@ img {
     margin-right: 10px;
     display: grid;
     gap: 30px;
+    z-index: 10;
 }
 
 @media (min-width: 768px){
@@ -136,6 +137,7 @@ img {
     color: $gray;
     writing-mode: vertical-rl;
     transform: rotate(180deg);
+    z-index: 10;
 }
 
 @media (min-width: 768px) {
@@ -155,6 +157,7 @@ img {
         grid-row: 2;
         justify-self: center;
         margin-top: 660px;
+        z-index: 10;
     }
 
     .pageGrid::before {
@@ -318,13 +321,86 @@ main {
 }
 
 /* Hero */
-.hero > * {
-    grid-column: 1 / -1;
+.hero {
+    background-color: $white;
+
+    h1, p {
+        color: $white;
+        mix-blend-mode: difference;
+        z-index: 2;
+        line-height: 1;
+    }
 
     h1 {
+        margin-top: 33px;
         font: {
             size: 91px;
             weight: bold;
+        }
+        
+    }
+    
+    p {
+        margin-top: 120px;
+        font-size: 17px;
+    }
+
+    img {
+        margin: 63px 0 100px;
+        width: 302px;
+        height: 506px;
+        object-fit: cover;
+    }
+}
+
+.hero > * {
+    grid-column: 1 / -1;
+    grid-row: 1;
+    justify-self: center;
+}
+
+@media (min-width: 768px) {
+    .hero {
+        h1 {
+            margin-top: 33px;
+            font-size: 229px;
+        }
+
+        p {
+            margin-top: 251px;
+            font-size: 44px;
+        }
+
+        img {
+            margin: 84px 0 183px;
+            width: 488px;
+            height: 639px;
+        }
+    }
+}
+
+@media (max-width: 374px) {
+    .hero {
+        h1 {
+            font-size: 75px;
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+    .hero {
+        h1 {
+            font-size: 160px;
+        }
+
+        p {
+            margin-top: 185.5px;
+            font-size: 30.5px;
+        }
+
+        img {
+            width: 395px;
+            height: 572.5px;
         }
     }
 }
