--- a/src/style.scss
+++ b/src/style.scss
@@ -58,7 +58,15 @@ img {
     display: grid;
     grid-template-columns: 20px auto 20px;
 
-    & > *, &::before, &::after {
+    & > * {
+        grid-column: 2;
+    }
+
+    &::before {
+        grid-column: 2;
+    }
+
+    &::after {
         grid-column: 2;
     }
 }
@@ -233,13 +241,13 @@ main {
 
     figure {
         grid-column: 1 / -1;
-    }
 
-    img {
-        width: 100%;
-        height: 498px;
-        object-fit: cover;
-    }
+        img {
+            width: 100%;
+            height: 498px;
+            object-fit: cover;
+        }
+    }  
 }
 
 @media (min-width: 768px) {
