--- a/src/style.scss
+++ b/src/style.scss
@@ -201,6 +201,7 @@ img {
     address {
         font-size: 14px;
         line-height: 1.3;
+        display: block;
     }
 
     .chat {
@@ -208,6 +209,7 @@ img {
         margin-top: -100px;
         color: $primary;
         font-size: 16px;
+        font-weight: bold;
         text-align: center;
 
         img {
@@ -231,7 +233,7 @@ main {
 }
 
 /* Header image */
-.heading {
+.headimg {
     .site {
         margin-top: 33px;
         color: $primary;
@@ -251,7 +253,7 @@ main {
 }
 
 @media (min-width: 768px) {
-    .heading {
+    .headimg {
         figure {
             grid-column: 2;
         }
@@ -348,12 +350,10 @@ main {
 
     h1 {
         margin-top: 33px;
-        font: {
-            size: 91px;
-            weight: bold;
-        }
-        
-    }
+        font-size: 91px;
+        font-weight: bold;
+    } 
+      
     
     p {
         margin-top: 120px;
@@ -417,7 +417,7 @@ main {
 /* Message */
 .msg {
     padding: 64px 0;
-    row-gap: 56px
+    row-gap: 56px;
 
     img {
         object-position: left center;
