--- a/src/style.scss
+++ b/src/style.scss
@@ -92,6 +92,7 @@ img {
     border: none;
     background-color: $primary;
     cursor: pointer;
+    z-index: 200;
     /* Navigation button's white line */
     display: grid;
     place-content: center;
@@ -111,6 +112,62 @@ img {
 
     &::after {
         transform: translateY(5px);
+    }
+}
+
+
+.open {
+    .nav-button::before {
+        transform: translateY(2px) rotate(45deg);
+    }
+
+    .nav-button::after {
+        transform: translateY(-2px) rotate(-45deg);
+    }
+}
+/* Navigation menu */
+.nav {
+    ul {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background: rgba($black, 0.8);
+        color: $white;
+        z-index: 100;
+        display: grid;
+        justify-items: center;
+        align-content: center;
+        gap: 50px;
+        transform: scale(0,0);
+        transform-origin: right top;
+        transition: transform 0.5s;
+    }
+}
+
+.open {
+    nav {
+        ul {
+            transform: scale(1, 1);
+        }
+    }
+
+    body {
+        height: 100%;
+        overflow: hidden;
+    }
+}
+
+@media (pointer: fine) and (hover: hover) {
+    html {
+        overflow-y: scroll;
+    }
+
+    .open {
+        body {
+            height: 100vh;
+        }
     }
 }
 
