--- a/src/style.scss
+++ b/src/style.scss
@@ -57,6 +57,7 @@ img {
 .partsGrid {
     display: grid;
     grid-template-columns: 20px auto 20px;
+    grid-template-rows: 1fr 1fr;
 
     & > * {
         grid-column: 2;
@@ -250,7 +251,7 @@ img {
     }
 
     .site {
-        margin-bottom: 33px;
+        margin-bottom: 23px;
         font-size: 37px;
         font-weight: bold;
     }
@@ -259,6 +260,7 @@ img {
         font-size: 14px;
         line-height: 1.3;
         display: block;
+        grid-row: 2;
     }
 
     .chat {
